--- a/servers/grepx-celery-server/src/main/resources/config.yaml
+++ b/servers/grepx-celery-server/src/main/resources/config.yaml
@@ -24,5 +24,5 @@ task:
 
 tasks:
   database:
-    uri: "sqlite:///C:/Users/USER/development/grepx-dagster-server/dagster_config_orm.db"
+    uri: "sqlite:////Users/mahesh/Desktop/grepx-pricing-app/servers/grepx-dagster-server/dagster_config_orm.db"
     table: "celery_tasks"
