add business task ifra

--- a/servers/grepx-task-generator-server/src/main/resources/pricing_tasks.yaml
+++ b/servers/grepx-task-generator-server/src/main/resources/pricing_tasks.yaml
@@ -5,7 +5,7 @@
 celery_tasks:
   # Data Download Tasks
   - name: pricing.download_ticker_data
-    module_path: business_tasks.providers.storage
+    module_path: business-tasks.providers.storage
     function_name: download_and_store
     description: Download stock price data from Yahoo Finance and store in database
     tags: [pricing, ingestion, download]
@@ -21,7 +21,7 @@ celery_tasks:
 
   # Indicator Calculation Tasks - All use calculate_indicator with indicator_type parameter
   - name: pricing.calculate_sma
-    module_path: business_tasks.tasks.indicators.sma
+    module_path: business-tasks.tasks.indicators.sma
     function_name: calculate
     description: Calculate Simple Moving Average indicator
     tags: [pricing, indicators, sma]
@@ -32,7 +32,7 @@ celery_tasks:
     is_active: true
 
   - name: pricing.calculate_ema
-    module_path: business_tasks.tasks.indicators.ema
+    module_path: business-tasks.tasks.indicators.ema
     function_name: calculate
     description: Calculate Exponential Moving Average indicator
     tags: [pricing, indicators, ema]
@@ -43,7 +43,7 @@ celery_tasks:
     is_active: true
 
   - name: pricing.calculate_rsi
-    module_path: business_tasks.tasks.indicators.rsi
+    module_path: business-tasks.tasks.indicators.rsi
     function_name: calculate
     description: Calculate Relative Strength Index indicator
     tags: [pricing, indicators, rsi]
@@ -54,7 +54,7 @@ celery_tasks:
     is_active: true
 
   - name: pricing.calculate_macd
-    module_path: business_tasks.tasks.indicators.macd
+    module_path: business-tasks.tasks.indicators.macd
     function_name: calculate
     description: Calculate MACD indicator
     tags: [pricing, indicators, macd]
@@ -65,7 +65,7 @@ celery_tasks:
     is_active: true
 
   - name: pricing.calculate_bollinger_bands
-    module_path: business_tasks.tasks.indicators.bollinger_bands
+    module_path: business-tasks.tasks.indicators.bollinger_bands
     function_name: calculate
     description: Calculate Bollinger Bands indicator
     tags: [pricing, indicators, bollinger]
@@ -76,7 +76,7 @@ celery_tasks:
     is_active: true
 
   - name: pricing.calculate_atr
-    module_path: business_tasks.tasks.indicators.atr
+    module_path: business-tasks.tasks.indicators.atr
     function_name: calculate
     description: Calculate Average True Range indicator
     tags: [pricing, indicators, atr]
@@ -87,7 +87,7 @@ celery_tasks:
     is_active: true
 
   - name: pricing.calculate_stochastic
-    module_path: business_tasks.tasks.indicators.stochastic
+    module_path: business-tasks.tasks.indicators.stochastic
     function_name: calculate
     description: Calculate Stochastic Oscillator indicator
     tags: [pricing, indicators, stochastic]
@@ -98,7 +98,7 @@ celery_tasks:
     is_active: true
 
   - name: pricing.calculate_adx
-    module_path: business_tasks.tasks.indicators.adx
+    module_path: business-tasks.tasks.indicators.adx
     function_name: calculate
     description: Calculate Average Directional Index indicator
     tags: [pricing, indicators, adx]
@@ -109,7 +109,7 @@ celery_tasks:
     is_active: true
 
   - name: pricing.calculate_obv
-    module_path: business_tasks.tasks.indicators.obv
+    module_path: business-tasks.tasks.indicators.obv
     function_name: calculate
     description: Calculate On-Balance Volume indicator
     tags: [pricing, indicators, obv]
@@ -120,7 +120,7 @@ celery_tasks:
     is_active: true
 
   - name: pricing.calculate_vwap
-    module_path: business_tasks.tasks.indicators.vwap
+    module_path: business-tasks.tasks.indicators.vwap
     function_name: calculate
     description: Calculate Volume Weighted Average Price indicator
     tags: [pricing, indicators, vwap]
@@ -131,7 +131,7 @@ celery_tasks:
     is_active: true
 
   - name: pricing.calculate_cci
-    module_path: business_tasks.tasks.indicators.cci
+    module_path: business-tasks.tasks.indicators.cci
     function_name: calculate
     description: Calculate Commodity Channel Index indicator
     tags: [pricing, indicators, cci]
@@ -142,7 +142,7 @@ celery_tasks:
     is_active: true
 
   - name: pricing.calculate_williams_r
-    module_path: business_tasks.tasks.indicators.williams_r
+    module_path: business-tasks.tasks.indicators.williams_r
     function_name: calculate
     description: Calculate Williams %R indicator
     tags: [pricing, indicators, williams]
