--- a/env.template
+++ b/env.template
@@ -16,5 +16,7 @@ DAGSTER_HOME=./servers/grepx-dagster-server/.dagster_home
 DAGSTER_PORT=3000
 FLOWER_PORT=5555
 FLOWER_ADDRESS=0.0.0.0
+AIRFLOW_PORT=8080
+AIRFLOW_HOST=0.0.0.0
 TIMEZONE=Asia/Kolkata
 
