--- a/requirements.txt
+++ b/requirements.txt
@@ -1,117 +1,32 @@
-aiosqlite
-alembic
-amqp
-annotated-types
-antlr4-python3-runtime
-anyio
-asyncpg
-backoff
-beautifulsoup4
-billiard
-celery
-certifi
-cffi
-charset-normalizer
-click
-click-didyoumean
-click-plugins
-click-repl
-colorama
-coloredlogs
-curl_cffi
-dagit
-dagster
-dagster-graphql
-dagster-pipes
-dagster-postgres
-dagster-webserver
-dagster_shared
-dnspython
-docstring_parser
-duckdb
-exceptiongroup
-filelock
-flower
-frozendict
-fsspec
-gql
-graphene
-graphql-core
-graphql-relay
-greenlet
-grpcio
-grpcio-health-checking
-h11
-httptools
-humanfriendly
-humanize
-hydra-core
-idna
-Jinja2
-kombu
-Mako
-markdown-it-py
-MarkupSafe
-mdurl
-motor
-multidict
-multitasking
-nsepython
-numpy
+# Root Requirements - Shared Dependencies
+# Each service has its own requirements.txt with pinned versions
+# This file documents shared core packages that MUST be consistent across services
+
+# Message Broker & Caching
+celery==5.4.0
+redis==5.0.1
+flower==2.0.1
+
+# Database & ORM
+pymongo>=4.0.0
+
+# Data Processing
+pandas>=2.0.0
+numpy>=1.26.0
+yfinance>=0.2.0
+
+# Configuration
+pyyaml==6.0.2
+hydra-core==1.3.2
 omegaconf>=2.3.0
-pandas
-pathlib_abc
-peewee
-platformdirs
-polars
-polars-runtime-32
-prometheus_client
-prompt_toolkit
-propcache
-protobuf
-psutil
-psycopg2-binary
-pyarrow
-pycparser
-pydantic
-pydantic_core
-Pygments
-pymongo
-pyreadline3
-python-dateutil
+
+# Utilities
 python-dotenv
-pytz
-PyYAML
-redis
 requests>=2.28.0
-requests-toolbelt
-rich
-scipy
-setuptools
-six
-soupsieve
-SQLAlchemy
-starlette
-structlog
-tabulate
-TA-Lib
-tomli
-tomlkit
-toposort
-tornado
-tqdm
-typing-inspection
-typing_extensions
-tzdata
-tzlocal
-universal_pathlib
-urllib3
-uvicorn
-vine
-watchdog
-watchfiles
-wcwidth
-websockets
-yarl
-yfinance
-prefect>=3.0.0
+
+# NOTE: Service-specific packages managed in:
+# - servers/grepx-celery-server/requirements.txt
+# - servers/grepx-dagster-server/requirements.txt
+# - servers/grepx-apache-airflow-server/requirements.txt
+# - servers/grepx-task-generator-server/requirements.txt
+# - shared/grepx-shared-models/requirements.txt
