--- a/servers/grepx-dagster-server/src/main/dagster_app/resources/config.yaml
+++ b/servers/grepx-dagster-server/src/main/dagster_app/resources/config.yaml
@@ -29,8 +29,9 @@ sensors:
   minimum_interval_seconds: 30
 
 # Database configuration
+# Uses GREPX_MASTER_DB_URL from env.common (absolute path)
 database:
-  db_url: "sqlite:///../grepx-dagster-server/dagster_config_orm.db"
+  db_url: "${GREPX_MASTER_DB_URL}"
 
 # Celery configuration
 celery:
