add for prefect

--- a/servers/grepx-task-generator-server/requirements.txt
+++ b/servers/grepx-task-generator-server/requirements.txt
@@ -11,3 +11,6 @@ pyyaml==6.0.2
 # Dagster (for ConfigurableResource base class)
 dagster==1.9.13
 
+# Prefect (for flow/deployment generation)
+prefect>=3.0.0
+
