--- a/servers/grepx-task-generator-server/src/main/resources/database.yaml
+++ b/servers/grepx-task-generator-server/src/main/resources/database.yaml
@@ -12,9 +12,41 @@ storage_configurations:
     timeout_seconds: 30
 
   - id: 2
-    storage_name: stock_analysis_mongodb
+    storage_name: tickers
     storage_type: mongodb
-    description: "MongoDB database for storing stock analysis data and task outputs"
+    description: "MongoDB database for ticker reference data"
+    connection_string: "mongodb://admin:password123@localhost:27017/ticker_database?authSource=admin"
+    host: localhost
+    port: 27017
+    database_name: ticker_database
+    username: admin
+    password: password123
+    auth_source: admin
+    is_default: false
+    active_flag: true
+    max_connections: 20
+    timeout_seconds: 30
+
+  - id: 3
+    storage_name: financial_statements
+    storage_type: mongodb
+    description: "MongoDB database for financial statements and extracted fields"
+    connection_string: "mongodb://admin:password123@localhost:27017/financial_database?authSource=admin"
+    host: localhost
+    port: 27017
+    database_name: financial_database
+    username: admin
+    password: password123
+    auth_source: admin
+    is_default: false
+    active_flag: true
+    max_connections: 20
+    timeout_seconds: 30
+
+  - id: 4
+    storage_name: stock_analysis
+    storage_type: mongodb
+    description: "MongoDB database for calculated metrics"
     connection_string: "mongodb://admin:password123@localhost:27017/stock_analysis?authSource=admin"
     host: localhost
     port: 27017
