--- a/servers/grepx-task-generator-server/src/main/resources/task-config.yaml
+++ b/servers/grepx-task-generator-server/src/main/resources/task-config.yaml
@@ -4,9 +4,11 @@
 
 # Note: Database URL is read from GREPX_MASTER_DB_URL environment variable
 # Make sure env.common is loaded before running this script
+# Note: Database URL is read from GREPX_MASTER_DB_URL environment variable
+# Make sure env.common is loaded before running this script
 
 # Path to files containing tasks and assets definitions
 tasks_files:
   - "resources/pricing_tasks.yaml"
-  - "resources/test_tasks.yaml"
-
+  - "resources/ticker_tasks.yaml"
+  - "resources/fundamentals_loader_tasks.yaml"
